--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "repository": "",
   "author": "jmanuelcorral",
   "license": "BSD",
-  "dependencies": {
-    "express": "~3.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-mocha-cli": "~1.3.0",
+    "grunt-mocha-phantomjs": "~0.3.0",
+    "mocha-phantomjs": "~3.1.5",
+    "expect.js": "~0.2.0",
+    "emitter-component": "~1.0.1",
+    "superagent": "~0.14.2"
   }
 }
